        Reviewed by Geoff.

http://bugs.webkit.org/show_bug.cgi?id=14288
        XMLHttpRequest doesn't use a correct content type for file:// URLs

        Test: fast/dom/xmlhttprequest-html-response-encoding.html

        * xml/xmlhttprequest.cpp:
        (WebCore::XMLHttpRequest::responseMIMEType): Use MIME type provided by
        the network layer, since it provides it even for non-HTTP responses.



Canonical link: https://commits.webkit.org/18591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23815 268f45cc-cd09-0410-ab3c-d52691b4dbfc